--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "~8.2.14",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
