--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.3",
+    "sweetalert2": "^9.11.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
