--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rxjs": "~6.5.3",
     "sweetalert2": "^9.11.0",
     "tslib": "^1.9.0",
+    "xlsx": "^0.16.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
